--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,12 @@
 
 
 
+
 body{
     background: #373B44;
     background: linear-gradient(30deg, rgba(55, 59, 68, 1) 0%, rgba(66, 134, 244, 1) 100%);
 
-    min-width: 350px;
+    min-width: 400px;
     
 }
 
@@ -289,4 +290,27 @@ padding-bottom: 2rem;
 }
 .main{
     height: fit-content;
+}
+.loader {
+    position: fixed;
+    display: flex;
+    inset: 0;
+    align-items: center;
+    justify-content: center;
+    background: skeyblue;
+    background: #032df47a;
+    height: 100vh;
+}
+
+.hide {
+    display: none;
+}
+
+
+
+.loader img,
+.loader svg {
+ 
+  height: 400px;
+  width: 200px;
 }
